--- a/web/fourth_umpire/templates/fourth_umpire/about.html
+++ b/web/fourth_umpire/templates/fourth_umpire/about.html
@@ -9,7 +9,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="en">
 
 <head>
-	<title>4th Umpire a Beauty Category Bootstrap Responsive website Template | About :: w3layouts</title>
+	<title>4th Umpire</title>
 	<!-- Meta Tags -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -52,8 +52,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<p class="para-y"><a href="{% url 'about' %}">Get more info</a></p>
 					</div>
 					<div class="nav-contact-w3ls">
-						<p>+0 111 222 333<span class="fa fa-phone" aria-hidden="true"></span></p>
-						<p class="para-y"><a href="mailto:info@example.com">info@example.com</a><span class="fa fa-envelope-o" aria-hidden="true"></span></p>
+						<p>+0 99788 44846<span class="fa fa-phone" aria-hidden="true"></span></p>
+						<p class="para-y"><a href="mailto:devanshu@iitk.ac.in">devanshu@iitk.ac.in</a><span class="fa fa-envelope-o" aria-hidden="true"></span></p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -106,10 +106,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container">
 	<div class="wthree_head_section">
 				<h3 class="w3l_header">About <span>Us</span></h3>
-				<p>Treat yourself to a facial or celebrating a special occasion, aromatherapy, our beauty
-and skin care services will suit every beauty need.</p>
+				<p>This web-app is created for Microsoft Code Fun Do competition.
+<br><br>
+In this project we have use various algorithms like Naive Bayes, SVM, Random Forest in training our various machine learning models. And on different stages of training and testng, final model works and best fit with random forest algorithm.
+<br><br>
+We have used dataset from Kaggle and then modified the csv files and make various csv files in order to train and for working of our different models.In addition, We have use varoius python libraries such as scikit learn, numpy, pandas,etc in order to code our models.</p>
 			</div>
-		<div class="ab-agile">
+		<!-- <div class="ab-agile">
 			<div class="col-md-6 aboutleft">
 				<h3>Welcome to Salon</h3>
 				<p class="para1">Donec bibendum velit quis diam venenatis, vulputate aliquam sapien blandit.
@@ -124,14 +127,14 @@ and skin care services will suit every beauty need.</p>
 			</div>
 			<div class="clearfix"></div>
 		</div>
-	</div>
+	</div> -->
 </div>
 <!-- //about -->
 <!-- wthree-mid -->
 	<div class="wthree-mid jarallax">
 		<div class="container">
-			<h3>Nisl amet dolor sit ipsum veroeros sed blandit</h3>
-			<p>Standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
+			<h3>4th Umpire - IPL Predictor</h3>
+			<p>We created this project with complete dedication.</p>
 		</div>
 	</div>
 <!-- //wthree-mid -->
@@ -141,16 +144,15 @@ and skin care services will suit every beauty need.</p>
 	<div class="container">
 		<div class="wthree_head_section">
 				<h3 class="w3l_header">Our <span>Team</span></h3>
-				<p>Treat yourself to a facial or celebrating a special occasion, aromatherapy, our beauty
-and skin care services will suit every beauty need.</p>
+				<p>We made many sincere efforts for completion of the project</p>
 			</div>
 		<div class="team-grid-top">
-			<div class="col-md-3 team1">
+			<div class="col-md-4 team1">
 				<div class="inner-team1">
 				<img src="{% static 'images/t1.jpg' %}" alt="" />
-				<h3>Selena</h3>
-				<h4>Stylist</h4>
-				<p>Lorem ipsum dolor sit amet, Phasselleous carnivel dolor</p>
+				<h3>Devanshu Somani</h3>
+				<!-- <h4>Stylist</h4>
+				<p>Lorem ipsum dolor sit amet, Phasselleous carnivel dolor</p> -->
 					<div class="team-social">
 						<a href="#"><i class="fa fa-twitter"></i></a>
 						<a href="#"><i class="fa fa-linkedin"></i></a>
@@ -158,12 +160,12 @@ and skin care services will suit every beauty need.</p>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3 team1">
+			<div class="col-md-4 team1">
 				<div class="inner-team1">
 				<img src="{% static 'images/t3.jpg' %}" alt="" />
-				<h3>Mary louis</h3>
-				<h4>Hairstylist</h4>
-				<p>Lorem ipsum dolor sit amet, Phasselleous carnivel dolor</p>
+				<h3>Ashish Kumar</h3>
+				<!-- <h4>Hairstylist</h4>
+				<p>Lorem ipsum dolor sit amet, Phasselleous carnivel dolor</p> -->
 					<div class="team-social">
 						<a href="#"><i class="fa fa-twitter"></i></a>
 						<a href="#"><i class="fa fa-linkedin"></i></a>
@@ -171,12 +173,12 @@ and skin care services will suit every beauty need.</p>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3 team1">
+			<div class="col-md-4 team1">
 				<div class="inner-team1">
 				<img src="{% static 'images/t2.jpg' %}" alt="" />
-				<h3>Paul kerry</h3>
-				<h4>Beautician</h4>
-				<p>Lorem ipsum dolor sit amet, Phasselleous carnivel dolor</p>
+				<h3>Kunal Ranjan</h3>
+				<!-- <h4>Beautician</h4>
+				<p>Lorem ipsum dolor sit amet, Phasselleous carnivel dolor</p> -->
 					<div class="team-social">
 						<a href="#"><i class="fa fa-twitter"></i></a>
 						<a href="#"><i class="fa fa-linkedin"></i></a>
@@ -184,7 +186,7 @@ and skin care services will suit every beauty need.</p>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3 team1">
+			<!-- <div class="col-md-3 team1">
 				<div class="inner-team1">
 				<img src="{% static 'images/t4.jpg' %}" alt="" />
 				<h3>john watson</h3>
@@ -196,7 +198,7 @@ and skin care services will suit every beauty need.</p>
 						<a href="#"><i class="fa fa-pinterest-p"></i></a>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<div class="clearfix"></div>
 		</div>
 		<div class="clearfix"></div>
@@ -228,21 +230,23 @@ and skin care services will suit every beauty need.</p>
 	<div class="footer">
 	<div class="container">
 		<div class="f-bg-w3l">
-		<div class="col-md-4 w3layouts_footer_grid">
-					<h2>Contact <span>Information</span></h2>
-					    <ul class="con_inner_text">
-							<li><span class="fa fa-map-marker" aria-hidden="true"></span>1234k Avenue, 4th block, <label> New York City.</label></li>
-							<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:info@example.com">info@example.com</a></li>
-							<li><span class="fa fa-phone" aria-hidden="true"></span> +1234 567 567</li>
-						</ul>
+			<div class="col-md-4 w3layouts_footer_grid">
+						<h2>Contact <span>Information</span></h2>
+						    <ul class="con_inner_text">
+								<li><span class="fa fa-map-marker" aria-hidden="true"></span>Hall-12, IIT Kanpur <label> U.P, India</label></li>
+								<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:devanshu@iitk.ac.in">devanshu@iitk.ac.in</a></li>
+								<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:akashish@iitk.ac.in">akashish@iitk.ac.in</a></li>
+								<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:rjkunal@iitk.ac.in">rjkunal@iitk.ac.in</a></li>
+								<li><span class="fa fa-phone" aria-hidden="true"></span> +91 96607 24660</li>
+							</ul>
 
-					<ul class="social_agileinfo">
-						<li><a href="#" class="w3_facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" class="w3_twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" class="w3_instagram"><i class="fa fa-instagram"></i></a></li>
-						<li><a href="#" class="w3_google"><i class="fa fa-google-plus"></i></a></li>
-					</ul>
-				</div>
+						<ul class="social_agileinfo">
+							<li><a href="https://www.facebook.com/ashish.k.jaiswal21" class="w3_facebook"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://twitter.com/iamrjkunal" class="w3_twitter"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="https://www.instagram.com/devanshusomani/" class="w3_instagram"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="https://plus.google.com/109386964403188731935" class="w3_google"><i class="fa fa-google-plus"></i></a></li>
+						</ul>
+					</div>
 				<div class="col-md-4 w3layouts_footer_grid">
 					<h2>Subscribe <span>Newsletter</span></h2>
 					<p>By subscribing to our mailing list you will always get latest news from us.</p>
