--- a/web/fourth_umpire/templates/fourth_umpire/contact.html
+++ b/web/fourth_umpire/templates/fourth_umpire/contact.html
@@ -9,7 +9,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="en">
 
 <head>
-	<title>4th Umpire a Beauty Category Bootstrap Responsive website Template | Contact :: w3layouts</title>
+	<title>4th Umpire</title>
 	<!-- Meta Tags -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -52,8 +52,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<p class="para-y"><a href="{% url 'about' %}">Get more info</a></p>
 					</div>
 					<div class="nav-contact-w3ls">
-						<p>+0 111 222 333<span class="fa fa-phone" aria-hidden="true"></span></p>
-						<p class="para-y"><a href="mailto:info@example.com">info@example.com</a><span class="fa fa-envelope-o" aria-hidden="true"></span></p>
+						<p>+91 99788 44846<span class="fa fa-phone" aria-hidden="true"></span></p>
+						<p class="para-y"><a href="mailto:devanshu@iitk.ac.in">devanshu@iitk.ac.in</a><span class="fa fa-envelope-o" aria-hidden="true"></span></p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -173,21 +173,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="footer">
 	<div class="container">
 		<div class="f-bg-w3l">
-		<div class="col-md-4 w3layouts_footer_grid">
-					<h2>Contact <span>Information</span></h2>
-					    <ul class="con_inner_text">
-							<li><span class="fa fa-map-marker" aria-hidden="true"></span>1234k Avenue, 4th block, <label> New York City.</label></li>
-							<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:info@example.com">info@example.com</a></li>
-							<li><span class="fa fa-phone" aria-hidden="true"></span> +1234 567 567</li>
-						</ul>
+			<div class="col-md-4 w3layouts_footer_grid">
+						<h2>Contact <span>Information</span></h2>
+						    <ul class="con_inner_text">
+								<li><span class="fa fa-map-marker" aria-hidden="true"></span>Hall-12, IIT Kanpur <label> U.P, India</label></li>
+								<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:devanshu@iitk.ac.in">devanshu@iitk.ac.in</a></li>
+								<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:akashish@iitk.ac.in">akashish@iitk.ac.in</a></li>
+								<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:rjkunal@iitk.ac.in">rjkunal@iitk.ac.in</a></li>
+								<li><span class="fa fa-phone" aria-hidden="true"></span> +91 96607 24660</li>
+							</ul>
 
-					<ul class="social_agileinfo">
-						<li><a href="#" class="w3_facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" class="w3_twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" class="w3_instagram"><i class="fa fa-instagram"></i></a></li>
-						<li><a href="#" class="w3_google"><i class="fa fa-google-plus"></i></a></li>
-					</ul>
-				</div>
+						<ul class="social_agileinfo">
+							<li><a href="https://www.facebook.com/ashish.k.jaiswal21" class="w3_facebook"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://twitter.com/iamrjkunal" class="w3_twitter"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="https://www.instagram.com/devanshusomani/" class="w3_instagram"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="https://plus.google.com/109386964403188731935" class="w3_google"><i class="fa fa-google-plus"></i></a></li>
+						</ul>
+					</div>
 				<div class="col-md-4 w3layouts_footer_grid">
 					<h2>Subscribe <span>Newsletter</span></h2>
 					<p>By subscribing to our mailing list you will always get latest news from us.</p>
