--- a/web/fourth_umpire/templates/fourth_umpire/gallery.html
+++ b/web/fourth_umpire/templates/fourth_umpire/gallery.html
@@ -9,7 +9,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="en">
 
 <head>
-	<title>4th Umpire a Beauty Category Bootstrap Responsive website Template | Gallery :: w3layouts</title>
+	<title>4th Umpire</title>
 	<!-- Meta Tags -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -23,6 +23,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		function hideURLbar() {
 			window.scrollTo(0, 1);
 		}
+
+		.imageContainer > img:hover {
+  width: 500px;
+  height: 200px;
+}
 	</script>
 	<!-- //Meta Tags -->
 	<link rel="stylesheet" href="{% static 'css/lightbox.css' %}"><!-- For-gallery-CSS -->
@@ -53,8 +58,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<p class="para-y"><a href="{% url 'about' %}">Get more info</a></p>
 					</div>
 					<div class="nav-contact-w3ls">
-						<p>+0 111 222 333<span class="fa fa-phone" aria-hidden="true"></span></p>
-						<p class="para-y"><a href="mailto:info@example.com">info@example.com</a><span class="fa fa-envelope-o" aria-hidden="true"></span></p>
+						<p>+91 99788 44846<span class="fa fa-phone" aria-hidden="true"></span></p>
+						<p class="para-y"><a href="mailto:devanshu@iitk.ac.in">devanshu@iitk.ac.in</a><span class="fa fa-envelope-o" aria-hidden="true"></span></p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -107,67 +112,67 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 		<div class="wthree_head_section">
 				<h3 class="w3l_header">Our <span>Gallery</span></h3>
-				<p>Treat yourself to a facial or celebrating a special occasion, aromatherapy, our beauty
-and skin care services will suit every beauty need.</p>
+				<p>Here are some of the moments captured of the most anticipated cricket festival of the year,
+				i.e, the Indian Premier League.</p>
 			</div>
 			<div class="gallery-info">
 				<div class="col-md-3 gallery-grids">
-					<a href="images/p1.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
+					<a href="{% static 'images/p1.jpg' %}" class="gallery-box" data-lightbox="example-set" data-title="">
 						<img src="{% static 'images/p1.jpg' %}" alt="" class="img-responsive zoom-img">
 					</a>
 				</div>
 				<div class="col-md-3 gallery-grids">
-					<a href="images/p2.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
+					<a href="{% static 'images/p2.jpg' %}" class="gallery-box" data-lightbox="example-set" data-title="">
 						<img src="{% static 'images/p2.jpg' %}" alt="" class="img-responsive zoom-img">
 					</a>
 				</div>
 				<div class="col-md-3 gallery-grids">
-					<a href="images/p3.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
+					<a href="{% static 'images/p3.jpg' %}" class="gallery-box" data-lightbox="example-set" data-title="">
 						<img src="{% static 'images/p3' %}.jpg" alt="" class="img-responsive zoom-img">
 					</a>
 				</div>
 				<div class="col-md-3 gallery-grids">
-					<a href="images/p4.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
+					<a href="{% static 'images/p4.jpg' %}" class="gallery-box" data-lightbox="example-set" data-title="">
 						<img src="{% static 'images/p4.jpg' %}" alt="" class="img-responsive zoom-img">
 					</a>
 				</div>
 				<div class="col-md-3 gallery-grids">
-					<a href="images/p5.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
+					<a href="{% static 'images/p5.jpg' %}" class="gallery-box" data-lightbox="example-set" data-title="">
 						<img src="{% static 'images/p5' %}.jpg" alt="" class="img-responsive zoom-img">
 					</a>
 				</div>
 				<div class="col-md-3 gallery-grids">
-					<a href="images/p6.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
+					<a href="{% static 'images/p6.jpg' %}" class="gallery-box" data-lightbox="example-set" data-title="">
 						<img src="{% static 'images/p6' %}.jpg" alt="" class="img-responsive zoom-img">
 					</a>
 				</div>
 				<div class="col-md-3 gallery-grids">
-					<a href="images/p7.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
+					<a href="{% static 'images/p7.jpg' %}" class="gallery-box" data-lightbox="example-set" data-title="">
 						<img src="{% static 'images/p7' %}.jpg" alt="" class="img-responsive zoom-img">
 					</a>
 				</div>
 				<div class="col-md-3 gallery-grids">
-					<a href="images/p8.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
+					<a href="{% static 'images/p8.jpg' %}" class="gallery-box" data-lightbox="example-set" data-title="">
 						<img src="{% static 'images/p8.jpg' %}" alt="" class="img-responsive zoom-img">
 					</a>
 				</div>
 				<div class="col-md-3 gallery-grids">
-					<a href="images/p9.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
+					<a href="{% static 'images/p9.jpg' %}" class="gallery-box" data-lightbox="example-set" data-title="">
 						<img src="{% static 'images/p9' %}.jpg" alt="" class="img-responsive zoom-img">
 					</a>
 				</div>
 				<div class="col-md-3 gallery-grids">
-					<a href="images/p10.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
+					<a href="{% static 'images/p10.jpg' %}" class="gallery-box" data-lightbox="example-set" data-title="">
 						<img src="{% static 'images/p10' %}.jpg" alt="" class="img-responsive zoom-img">
 					</a>
 				</div>
 				<div class="col-md-3 gallery-grids">
-					<a href="images/p11.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
+					<a href="{% static 'images/p11.jpg' %}" class="gallery-box" data-lightbox="example-set" data-title="">
 						<img src="{% static 'images/p11' %}.jpg" alt="" class="img-responsive zoom-img">
 					</a>
 				</div>
 				<div class="col-md-3 gallery-grids">
-					<a href="images/p12.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
+					<a href="{% static 'images/p12.jpg' %}" class="gallery-box" data-lightbox="example-set" data-title="">
 						<img src="{% static 'images/p12.jpg' %}" alt="" class="img-responsive zoom-img">
 					</a>
 				</div>
@@ -182,21 +187,23 @@ and skin care services will suit every beauty need.</p>
 	<div class="footer">
 	<div class="container">
 		<div class="f-bg-w3l">
-		<div class="col-md-4 w3layouts_footer_grid">
-					<h2>Contact <span>Information</span></h2>
-					    <ul class="con_inner_text">
-							<li><span class="fa fa-map-marker" aria-hidden="true"></span>1234k Avenue, 4th block, <label> New York City.</label></li>
-							<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:info@example.com">info@example.com</a></li>
-							<li><span class="fa fa-phone" aria-hidden="true"></span> +1234 567 567</li>
-						</ul>
+			<div class="col-md-4 w3layouts_footer_grid">
+						<h2>Contact <span>Information</span></h2>
+						    <ul class="con_inner_text">
+								<li><span class="fa fa-map-marker" aria-hidden="true"></span>Hall-12, IIT Kanpur <label> U.P, India</label></li>
+								<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:devanshu@iitk.ac.in">devanshu@iitk.ac.in</a></li>
+								<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:akashish@iitk.ac.in">akashish@iitk.ac.in</a></li>
+								<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:rjkunal@iitk.ac.in">rjkunal@iitk.ac.in</a></li>
+								<li><span class="fa fa-phone" aria-hidden="true"></span> +91 96607 24660</li>
+							</ul>
 
-					<ul class="social_agileinfo">
-						<li><a href="#" class="w3_facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" class="w3_twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" class="w3_instagram"><i class="fa fa-instagram"></i></a></li>
-						<li><a href="#" class="w3_google"><i class="fa fa-google-plus"></i></a></li>
-					</ul>
-				</div>
+						<ul class="social_agileinfo">
+							<li><a href="https://www.facebook.com/ashish.k.jaiswal21" class="w3_facebook"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://twitter.com/iamrjkunal" class="w3_twitter"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="https://www.instagram.com/devanshusomani/" class="w3_instagram"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="https://plus.google.com/109386964403188731935" class="w3_google"><i class="fa fa-google-plus"></i></a></li>
+						</ul>
+					</div>
 				<div class="col-md-4 w3layouts_footer_grid">
 					<h2>Subscribe <span>Newsletter</span></h2>
 					<p>By subscribing to our mailing list you will always get latest news from us.</p>
@@ -209,21 +216,21 @@ and skin care services will suit every beauty need.</p>
 				<div class="col-md-4 w3layouts_footer_grid">
 					<h3>Recent <span>Works</span></h3>
 					  <ul class="con_inner_text midimg">
-						  <li><a href="#"><img src="{% static 'images/p2.jpg' %}" alt="" class="img-responsive" /></a></li>
-  					    <li><a href="#"><img src="{% static 'images/p3.jpg' %}" alt="" class="img-responsive" /></a></li>
-  						<li><a href="#"><img src="{% static 'images/p4.jpg' %}" alt="" class="img-responsive" /></a></li>
-  						<li><a href="#"><img src="{% static 'images/p5.jpg' %}" alt="" class="img-responsive" /></a></li>
-  						<li><a href="#"><img src="{% static 'images/p6.jpg' %}" alt="" class="img-responsive" /></a></li>
-  					    <li><a href="#"><img src="{% static 'images/p7.jpg' %}" alt="" class="img-responsive" /></a></li>
-  						 <li><a href="#"><img src="{% static 'images/p8.jpg' %}" alt="" class="img-responsive" /></a></li>
-  						<li><a href="#"><img src="{% static 'images/p9.jpg' %}" alt="" class="img-responsive" /></a></li>
+						  <li><a href="#"><img src="{% static 'images/p2.jpg' %}" alt="" class="img-responsive imageContainer" /></a></li>
+  					    <li><a href="#"><img src="{% static 'images/p3.jpg' %}" alt="" class="img-responsive imageContainer" /></a></li>
+  						<li><a href="#"><img src="{% static 'images/p4.jpg' %}" alt="" class="img-responsive imageContainer" /></a></li>
+  						<li><a href="#"><img src="{% static 'images/p5.jpg' %}" alt="" class="img-responsive imageContainer" /></a></li>
+  						<li><a href="#"><img src="{% static 'images/p6.jpg' %}" alt="" class="img-responsive imageContainer" /></a></li>
+  					    <li><a href="#"><img src="{% static 'images/p7.jpg' %}" alt="" class="img-responsive imageContainer" /></a></li>
+  						 <li><a href="#"><img src="{% static 'images/p8.jpg' %}" alt="" class="img-responsive imageContainer" /></a></li>
+  						<li><a href="#"><img src="{% static 'images/p9.jpg' %}" alt="" class="img-responsive imageContainer" /></a></li>
 				     </ul>
 
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 			</div>
-			<p class="copyright">© 2017 4th Umpire. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank">w3layouts</a></p>
+			<p class="copyright">© 2017 4th Umpire. All Rights Reserved</p>
 	</div>
 	<!-- //footer -->
 
